flashcards: add CardsService#getAllCards() + change api for picking next card deck to /api/cards/random/, add /api/cards/{id} to display all dictionary cards